--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "esmls": "^0.1.50",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "react-router": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
